Compilador Py/Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     declaration -> init_declarator SEMICOLON
Rule 4     declaration -> declarator EQUALS function_call
Rule 5     init_declarator -> declarator
Rule 6     init_declarator -> declarator EQUALS assignment_expression
Rule 7     declarator -> LET IDENTIFIER COLON type_specifier
Rule 8     declarator -> CONST IDENTIFIER COLON type_specifier
Rule 9     type_specifier -> VOID
Rule 10    type_specifier -> CHAR
Rule 11    type_specifier -> INT
Rule 12    type_specifier -> FLOAT
Rule 13    type_specifier -> STRING
Rule 14    type_specifier -> BOOL
Rule 15    literal -> INT_LITERAL
Rule 16    literal -> FLOAT_LITERAL
Rule 17    literal -> STRING_LITERAL
Rule 18    primary_expression -> IDENTIFIER
Rule 19    primary_expression -> literal
Rule 20    primary_expression -> RND_PAR_OPEN assignment_expression RND_PAR_CLOSE
Rule 21    additive_expression -> primary_expression
Rule 22    additive_expression -> additive_expression PLUS primary_expression
Rule 23    additive_expression -> additive_expression MINUS primary_expression
Rule 24    multiplicative_expression -> additive_expression
Rule 25    multiplicative_expression -> multiplicative_expression MUL additive_expression
Rule 26    multiplicative_expression -> multiplicative_expression DIV additive_expression
Rule 27    relational_expression -> multiplicative_expression
Rule 28    relational_expression -> relational_expression LESS_OP multiplicative_expression
Rule 29    relational_expression -> relational_expression GREATER_OP multiplicative_expression
Rule 30    relational_expression -> relational_expression LE_OP multiplicative_expression
Rule 31    relational_expression -> relational_expression GE_OP multiplicative_expression
Rule 32    equality_expression -> relational_expression
Rule 33    equality_expression -> equality_expression EQ_OP relational_expression
Rule 34    equality_expression -> equality_expression NE_OP relational_expression
Rule 35    and_expression -> equality_expression
Rule 36    and_expression -> and_expression AND_OP equality_expression
Rule 37    or_expression -> and_expression
Rule 38    or_expression -> or_expression OR_OP and_expression
Rule 39    assignment_expression -> or_expression
Rule 40    assignment_expression -> primary_expression EQUALS multiplicative_expression
Rule 41    statement -> function_call
Rule 42    statement -> compound_statement
Rule 43    statement -> assignment_statement
Rule 44    statement -> function_definition
Rule 45    statement -> declaration
Rule 46    statement -> selection_statement
Rule 47    statement -> iteration_statement
Rule 48    statement_list -> statement
Rule 49    statement_list -> statement_list statement
Rule 50    compound_statement -> CUR_PAR_OPEN CUR_PAR_CLOSE
Rule 51    compound_statement -> CUR_PAR_OPEN statement_list CUR_PAR_CLOSE
Rule 52    assignment_statement -> assignment_expression SEMICOLON
Rule 53    assignment_statement -> primary_expression EQUALS function_call
Rule 54    identifier_list -> empty
Rule 55    identifier_list -> IDENTIFIER COLON type_specifier
Rule 56    identifier_list -> identifier_list COMMA IDENTIFIER COLON type_specifier
Rule 57    parameter_list -> empty
Rule 58    parameter_list -> assignment_expression
Rule 59    parameter_list -> parameter_list COMMA assignment_expression
Rule 60    function_definition -> FUNC IDENTIFIER RND_PAR_OPEN identifier_list RND_PAR_CLOSE ARROW type_specifier compound_statement
Rule 61    function_call -> IDENTIFIER RND_PAR_OPEN parameter_list RND_PAR_CLOSE SEMICOLON
Rule 62    selection_statement -> IF assignment_expression compound_statement
Rule 63    selection_statement -> IF assignment_expression compound_statement ELSE compound_statement
Rule 64    iteration_statement -> FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON INC_OP compound_statement
Rule 65    iteration_statement -> FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON DEC_OP compound_statement
Rule 66    iteration_statement -> WHILE assignment_expression compound_statement
Rule 67    empty -> <empty>

Terminals, with rules where they appear

AND_OP               : 36
ARROW                : 60
BOOL                 : 14
BOX_PAR_CLOSE        : 64 65
BOX_PAR_OPEN         : 64 65
CHAR                 : 10
COLON                : 7 8 55 56 64 65
COMMA                : 56 59 64 65
CONST                : 8
CUR_PAR_CLOSE        : 50 51
CUR_PAR_OPEN         : 50 51
DEC_OP               : 65
DIV                  : 26
ELSE                 : 63
EQUALS               : 4 6 40 53
EQ_OP                : 33
FLOAT                : 12
FLOAT_LITERAL        : 16
FROM                 : 64 65
FUNC                 : 60
GE_OP                : 31
GREATER_OP           : 29
IDENTIFIER           : 7 8 18 55 56 60 61
IF                   : 62 63
INC_OP               : 64
INT                  : 11
INT_LITERAL          : 15
LESS_OP              : 28
LET                  : 7
LE_OP                : 30
MINUS                : 23
MUL                  : 25
NE_OP                : 34
OR_OP                : 38
PLUS                 : 22
RND_PAR_CLOSE        : 20 60 61
RND_PAR_OPEN         : 20 60 61
SEMICOLON            : 3 52 61
STRING               : 13
STRING_LITERAL       : 17
VOID                 : 9
WHILE                : 66
error                : 

Nonterminals, with rules where they appear

additive_expression  : 22 23 24 25 26
and_expression       : 36 37 38
assignment_expression : 6 20 52 58 59 62 63 64 64 65 65 66
assignment_statement : 43
compound_statement   : 42 60 62 63 63 64 65 66
declaration          : 45
declarator           : 4 5 6
empty                : 54 57
equality_expression  : 33 34 35 36
function_call        : 4 41 53
function_definition  : 44
identifier_list      : 56 60
init_declarator      : 3
iteration_statement  : 47
literal              : 19
multiplicative_expression : 25 26 27 28 29 30 31 40
or_expression        : 38 39
parameter_list       : 59 61
primary_expression   : 21 22 23 40 53
program              : 2 0
relational_expression : 28 29 30 31 32 33 34
selection_statement  : 46
statement            : 1 2 48 49
statement_list       : 49 51
type_specifier       : 7 8 55 56 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (61) function_call -> . IDENTIFIER RND_PAR_OPEN parameter_list RND_PAR_CLOSE SEMICOLON
    (50) compound_statement -> . CUR_PAR_OPEN CUR_PAR_CLOSE
    (51) compound_statement -> . CUR_PAR_OPEN statement_list CUR_PAR_CLOSE
    (52) assignment_statement -> . assignment_expression SEMICOLON
    (53) assignment_statement -> . primary_expression EQUALS function_call
    (60) function_definition -> . FUNC IDENTIFIER RND_PAR_OPEN identifier_list RND_PAR_CLOSE ARROW type_specifier compound_statement
    (3) declaration -> . init_declarator SEMICOLON
    (4) declaration -> . declarator EQUALS function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON INC_OP compound_statement
    (65) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON DEC_OP compound_statement
    (66) iteration_statement -> . WHILE assignment_expression compound_statement
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression EQUALS multiplicative_expression
    (18) primary_expression -> . IDENTIFIER
    (19) primary_expression -> . literal
    (20) primary_expression -> . RND_PAR_OPEN assignment_expression RND_PAR_CLOSE
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator EQUALS assignment_expression
    (7) declarator -> . LET IDENTIFIER COLON type_specifier
    (8) declarator -> . CONST IDENTIFIER COLON type_specifier
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR_OP and_expression
    (15) literal -> . INT_LITERAL
    (16) literal -> . FLOAT_LITERAL
    (17) literal -> . STRING_LITERAL
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND_OP equality_expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression EQ_OP relational_expression
    (34) equality_expression -> . equality_expression NE_OP relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression LESS_OP multiplicative_expression
    (29) relational_expression -> . relational_expression GREATER_OP multiplicative_expression
    (30) relational_expression -> . relational_expression LE_OP multiplicative_expression
    (31) relational_expression -> . relational_expression GE_OP multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression MUL additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIV additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    IDENTIFIER      shift and go to state 10
    CUR_PAR_OPEN    shift and go to state 12
    FUNC            shift and go to state 15
    IF              shift and go to state 18
    FROM            shift and go to state 19
    WHILE           shift and go to state 20
    RND_PAR_OPEN    shift and go to state 11
    LET             shift and go to state 24
    CONST           shift and go to state 25
    INT_LITERAL     shift and go to state 27
    FLOAT_LITERAL   shift and go to state 28
    STRING_LITERAL  shift and go to state 29

    program                        shift and go to state 1
    statement                      shift and go to state 2
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    assignment_expression          shift and go to state 13
    primary_expression             shift and go to state 14
    init_declarator                shift and go to state 16
    declarator                     shift and go to state 17
    or_expression                  shift and go to state 21
    multiplicative_expression      shift and go to state 22
    literal                        shift and go to state 23
    and_expression                 shift and go to state 26
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (61) function_call -> . IDENTIFIER RND_PAR_OPEN parameter_list RND_PAR_CLOSE SEMICOLON
    (50) compound_statement -> . CUR_PAR_OPEN CUR_PAR_CLOSE
    (51) compound_statement -> . CUR_PAR_OPEN statement_list CUR_PAR_CLOSE
    (52) assignment_statement -> . assignment_expression SEMICOLON
    (53) assignment_statement -> . primary_expression EQUALS function_call
    (60) function_definition -> . FUNC IDENTIFIER RND_PAR_OPEN identifier_list RND_PAR_CLOSE ARROW type_specifier compound_statement
    (3) declaration -> . init_declarator SEMICOLON
    (4) declaration -> . declarator EQUALS function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON INC_OP compound_statement
    (65) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON DEC_OP compound_statement
    (66) iteration_statement -> . WHILE assignment_expression compound_statement
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression EQUALS multiplicative_expression
    (18) primary_expression -> . IDENTIFIER
    (19) primary_expression -> . literal
    (20) primary_expression -> . RND_PAR_OPEN assignment_expression RND_PAR_CLOSE
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator EQUALS assignment_expression
    (7) declarator -> . LET IDENTIFIER COLON type_specifier
    (8) declarator -> . CONST IDENTIFIER COLON type_specifier
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR_OP and_expression
    (15) literal -> . INT_LITERAL
    (16) literal -> . FLOAT_LITERAL
    (17) literal -> . STRING_LITERAL
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND_OP equality_expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression EQ_OP relational_expression
    (34) equality_expression -> . equality_expression NE_OP relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression LESS_OP multiplicative_expression
    (29) relational_expression -> . relational_expression GREATER_OP multiplicative_expression
    (30) relational_expression -> . relational_expression LE_OP multiplicative_expression
    (31) relational_expression -> . relational_expression GE_OP multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression MUL additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIV additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    IDENTIFIER      shift and go to state 10
    CUR_PAR_OPEN    shift and go to state 12
    FUNC            shift and go to state 15
    IF              shift and go to state 18
    FROM            shift and go to state 19
    WHILE           shift and go to state 20
    RND_PAR_OPEN    shift and go to state 11
    LET             shift and go to state 24
    CONST           shift and go to state 25
    INT_LITERAL     shift and go to state 27
    FLOAT_LITERAL   shift and go to state 28
    STRING_LITERAL  shift and go to state 29

    statement                      shift and go to state 33
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    assignment_expression          shift and go to state 13
    primary_expression             shift and go to state 14
    init_declarator                shift and go to state 16
    declarator                     shift and go to state 17
    or_expression                  shift and go to state 21
    multiplicative_expression      shift and go to state 22
    literal                        shift and go to state 23
    and_expression                 shift and go to state 26
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32

state 2

    (1) program -> statement .

    IDENTIFIER      reduce using rule 1 (program -> statement .)
    CUR_PAR_OPEN    reduce using rule 1 (program -> statement .)
    FUNC            reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    FROM            reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    RND_PAR_OPEN    reduce using rule 1 (program -> statement .)
    LET             reduce using rule 1 (program -> statement .)
    CONST           reduce using rule 1 (program -> statement .)
    INT_LITERAL     reduce using rule 1 (program -> statement .)
    FLOAT_LITERAL   reduce using rule 1 (program -> statement .)
    STRING_LITERAL  reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (41) statement -> function_call .

    IDENTIFIER      reduce using rule 41 (statement -> function_call .)
    CUR_PAR_OPEN    reduce using rule 41 (statement -> function_call .)
    FUNC            reduce using rule 41 (statement -> function_call .)
    IF              reduce using rule 41 (statement -> function_call .)
    FROM            reduce using rule 41 (statement -> function_call .)
    WHILE           reduce using rule 41 (statement -> function_call .)
    RND_PAR_OPEN    reduce using rule 41 (statement -> function_call .)
    LET             reduce using rule 41 (statement -> function_call .)
    CONST           reduce using rule 41 (statement -> function_call .)
    INT_LITERAL     reduce using rule 41 (statement -> function_call .)
    FLOAT_LITERAL   reduce using rule 41 (statement -> function_call .)
    STRING_LITERAL  reduce using rule 41 (statement -> function_call .)
    $end            reduce using rule 41 (statement -> function_call .)
    CUR_PAR_CLOSE   reduce using rule 41 (statement -> function_call .)


state 4

    (42) statement -> compound_statement .

    IDENTIFIER      reduce using rule 42 (statement -> compound_statement .)
    CUR_PAR_OPEN    reduce using rule 42 (statement -> compound_statement .)
    FUNC            reduce using rule 42 (statement -> compound_statement .)
    IF              reduce using rule 42 (statement -> compound_statement .)
    FROM            reduce using rule 42 (statement -> compound_statement .)
    WHILE           reduce using rule 42 (statement -> compound_statement .)
    RND_PAR_OPEN    reduce using rule 42 (statement -> compound_statement .)
    LET             reduce using rule 42 (statement -> compound_statement .)
    CONST           reduce using rule 42 (statement -> compound_statement .)
    INT_LITERAL     reduce using rule 42 (statement -> compound_statement .)
    FLOAT_LITERAL   reduce using rule 42 (statement -> compound_statement .)
    STRING_LITERAL  reduce using rule 42 (statement -> compound_statement .)
    $end            reduce using rule 42 (statement -> compound_statement .)
    CUR_PAR_CLOSE   reduce using rule 42 (statement -> compound_statement .)


state 5

    (43) statement -> assignment_statement .

    IDENTIFIER      reduce using rule 43 (statement -> assignment_statement .)
    CUR_PAR_OPEN    reduce using rule 43 (statement -> assignment_statement .)
    FUNC            reduce using rule 43 (statement -> assignment_statement .)
    IF              reduce using rule 43 (statement -> assignment_statement .)
    FROM            reduce using rule 43 (statement -> assignment_statement .)
    WHILE           reduce using rule 43 (statement -> assignment_statement .)
    RND_PAR_OPEN    reduce using rule 43 (statement -> assignment_statement .)
    LET             reduce using rule 43 (statement -> assignment_statement .)
    CONST           reduce using rule 43 (statement -> assignment_statement .)
    INT_LITERAL     reduce using rule 43 (statement -> assignment_statement .)
    FLOAT_LITERAL   reduce using rule 43 (statement -> assignment_statement .)
    STRING_LITERAL  reduce using rule 43 (statement -> assignment_statement .)
    $end            reduce using rule 43 (statement -> assignment_statement .)
    CUR_PAR_CLOSE   reduce using rule 43 (statement -> assignment_statement .)


state 6

    (44) statement -> function_definition .

    IDENTIFIER      reduce using rule 44 (statement -> function_definition .)
    CUR_PAR_OPEN    reduce using rule 44 (statement -> function_definition .)
    FUNC            reduce using rule 44 (statement -> function_definition .)
    IF              reduce using rule 44 (statement -> function_definition .)
    FROM            reduce using rule 44 (statement -> function_definition .)
    WHILE           reduce using rule 44 (statement -> function_definition .)
    RND_PAR_OPEN    reduce using rule 44 (statement -> function_definition .)
    LET             reduce using rule 44 (statement -> function_definition .)
    CONST           reduce using rule 44 (statement -> function_definition .)
    INT_LITERAL     reduce using rule 44 (statement -> function_definition .)
    FLOAT_LITERAL   reduce using rule 44 (statement -> function_definition .)
    STRING_LITERAL  reduce using rule 44 (statement -> function_definition .)
    $end            reduce using rule 44 (statement -> function_definition .)
    CUR_PAR_CLOSE   reduce using rule 44 (statement -> function_definition .)


state 7

    (45) statement -> declaration .

    IDENTIFIER      reduce using rule 45 (statement -> declaration .)
    CUR_PAR_OPEN    reduce using rule 45 (statement -> declaration .)
    FUNC            reduce using rule 45 (statement -> declaration .)
    IF              reduce using rule 45 (statement -> declaration .)
    FROM            reduce using rule 45 (statement -> declaration .)
    WHILE           reduce using rule 45 (statement -> declaration .)
    RND_PAR_OPEN    reduce using rule 45 (statement -> declaration .)
    LET             reduce using rule 45 (statement -> declaration .)
    CONST           reduce using rule 45 (statement -> declaration .)
    INT_LITERAL     reduce using rule 45 (statement -> declaration .)
    FLOAT_LITERAL   reduce using rule 45 (statement -> declaration .)
    STRING_LITERAL  reduce using rule 45 (statement -> declaration .)
    $end            reduce using rule 45 (statement -> declaration .)
    CUR_PAR_CLOSE   reduce using rule 45 (statement -> declaration .)


state 8

    (46) statement -> selection_statement .

    IDENTIFIER      reduce using rule 46 (statement -> selection_statement .)
    CUR_PAR_OPEN    reduce using rule 46 (statement -> selection_statement .)
    FUNC            reduce using rule 46 (statement -> selection_statement .)
    IF              reduce using rule 46 (statement -> selection_statement .)
    FROM            reduce using rule 46 (statement -> selection_statement .)
    WHILE           reduce using rule 46 (statement -> selection_statement .)
    RND_PAR_OPEN    reduce using rule 46 (statement -> selection_statement .)
    LET             reduce using rule 46 (statement -> selection_statement .)
    CONST           reduce using rule 46 (statement -> selection_statement .)
    INT_LITERAL     reduce using rule 46 (statement -> selection_statement .)
    FLOAT_LITERAL   reduce using rule 46 (statement -> selection_statement .)
    STRING_LITERAL  reduce using rule 46 (statement -> selection_statement .)
    $end            reduce using rule 46 (statement -> selection_statement .)
    CUR_PAR_CLOSE   reduce using rule 46 (statement -> selection_statement .)


state 9

    (47) statement -> iteration_statement .

    IDENTIFIER      reduce using rule 47 (statement -> iteration_statement .)
    CUR_PAR_OPEN    reduce using rule 47 (statement -> iteration_statement .)
    FUNC            reduce using rule 47 (statement -> iteration_statement .)
    IF              reduce using rule 47 (statement -> iteration_statement .)
    FROM            reduce using rule 47 (statement -> iteration_statement .)
    WHILE           reduce using rule 47 (statement -> iteration_statement .)
    RND_PAR_OPEN    reduce using rule 47 (statement -> iteration_statement .)
    LET             reduce using rule 47 (statement -> iteration_statement .)
    CONST           reduce using rule 47 (statement -> iteration_statement .)
    INT_LITERAL     reduce using rule 47 (statement -> iteration_statement .)
    FLOAT_LITERAL   reduce using rule 47 (statement -> iteration_statement .)
    STRING_LITERAL  reduce using rule 47 (statement -> iteration_statement .)
    $end            reduce using rule 47 (statement -> iteration_statement .)
    CUR_PAR_CLOSE   reduce using rule 47 (statement -> iteration_statement .)


state 10

    (61) function_call -> IDENTIFIER . RND_PAR_OPEN parameter_list RND_PAR_CLOSE SEMICOLON
    (18) primary_expression -> IDENTIFIER .

    RND_PAR_OPEN    shift and go to state 34
    EQUALS          reduce using rule 18 (primary_expression -> IDENTIFIER .)
    PLUS            reduce using rule 18 (primary_expression -> IDENTIFIER .)
    MINUS           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    MUL             reduce using rule 18 (primary_expression -> IDENTIFIER .)
    DIV             reduce using rule 18 (primary_expression -> IDENTIFIER .)
    LESS_OP         reduce using rule 18 (primary_expression -> IDENTIFIER .)
    GREATER_OP      reduce using rule 18 (primary_expression -> IDENTIFIER .)
    LE_OP           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    GE_OP           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    EQ_OP           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    NE_OP           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    AND_OP          reduce using rule 18 (primary_expression -> IDENTIFIER .)
    OR_OP           reduce using rule 18 (primary_expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 18 (primary_expression -> IDENTIFIER .)


state 11

    (20) primary_expression -> RND_PAR_OPEN . assignment_expression RND_PAR_CLOSE
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression EQUALS multiplicative_expression
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR_OP and_expression
    (18) primary_expression -> . IDENTIFIER
    (19) primary_expression -> . literal
    (20) primary_expression -> . RND_PAR_OPEN assignment_expression RND_PAR_CLOSE
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND_OP equality_expression
    (15) literal -> . INT_LITERAL
    (16) literal -> . FLOAT_LITERAL
    (17) literal -> . STRING_LITERAL
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression EQ_OP relational_expression
    (34) equality_expression -> . equality_expression NE_OP relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression LESS_OP multiplicative_expression
    (29) relational_expression -> . relational_expression GREATER_OP multiplicative_expression
    (30) relational_expression -> . relational_expression LE_OP multiplicative_expression
    (31) relational_expression -> . relational_expression GE_OP multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression MUL additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIV additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    IDENTIFIER      shift and go to state 37
    RND_PAR_OPEN    shift and go to state 11
    INT_LITERAL     shift and go to state 27
    FLOAT_LITERAL   shift and go to state 28
    STRING_LITERAL  shift and go to state 29

    assignment_expression          shift and go to state 35
    or_expression                  shift and go to state 21
    primary_expression             shift and go to state 36
    multiplicative_expression      shift and go to state 22
    and_expression                 shift and go to state 26
    literal                        shift and go to state 23
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32

state 12

    (50) compound_statement -> CUR_PAR_OPEN . CUR_PAR_CLOSE
    (51) compound_statement -> CUR_PAR_OPEN . statement_list CUR_PAR_CLOSE
    (48) statement_list -> . statement
    (49) statement_list -> . statement_list statement
    (41) statement -> . function_call
    (42) statement -> . compound_statement
    (43) statement -> . assignment_statement
    (44) statement -> . function_definition
    (45) statement -> . declaration
    (46) statement -> . selection_statement
    (47) statement -> . iteration_statement
    (61) function_call -> . IDENTIFIER RND_PAR_OPEN parameter_list RND_PAR_CLOSE SEMICOLON
    (50) compound_statement -> . CUR_PAR_OPEN CUR_PAR_CLOSE
    (51) compound_statement -> . CUR_PAR_OPEN statement_list CUR_PAR_CLOSE
    (52) assignment_statement -> . assignment_expression SEMICOLON
    (53) assignment_statement -> . primary_expression EQUALS function_call
    (60) function_definition -> . FUNC IDENTIFIER RND_PAR_OPEN identifier_list RND_PAR_CLOSE ARROW type_specifier compound_statement
    (3) declaration -> . init_declarator SEMICOLON
    (4) declaration -> . declarator EQUALS function_call
    (62) selection_statement -> . IF assignment_expression compound_statement
    (63) selection_statement -> . IF assignment_expression compound_statement ELSE compound_statement
    (64) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON INC_OP compound_statement
    (65) iteration_statement -> . FROM BOX_PAR_OPEN assignment_expression COMMA assignment_expression BOX_PAR_CLOSE COLON DEC_OP compound_statement
    (66) iteration_statement -> . WHILE assignment_expression compound_statement
    (39) assignment_expression -> . or_expression
    (40) assignment_expression -> . primary_expression EQUALS multiplicative_expression
    (18) primary_expression -> . IDENTIFIER
    (19) primary_expression -> . literal
    (20) primary_expression -> . RND_PAR_OPEN assignment_expression RND_PAR_CLOSE
    (5) init_declarator -> . declarator
    (6) init_declarator -> . declarator EQUALS assignment_expression
    (7) declarator -> . LET IDENTIFIER COLON type_specifier
    (8) declarator -> . CONST IDENTIFIER COLON type_specifier
    (37) or_expression -> . and_expression
    (38) or_expression -> . or_expression OR_OP and_expression
    (15) literal -> . INT_LITERAL
    (16) literal -> . FLOAT_LITERAL
    (17) literal -> . STRING_LITERAL
    (35) and_expression -> . equality_expression
    (36) and_expression -> . and_expression AND_OP equality_expression
    (32) equality_expression -> . relational_expression
    (33) equality_expression -> . equality_expression EQ_OP relational_expression
    (34) equality_expression -> . equality_expression NE_OP relational_expression
    (27) relational_expression -> . multiplicative_expression
    (28) relational_expression -> . relational_expression LESS_OP multiplicative_expression
    (29) relational_expression -> . relational_expression GREATER_OP multiplicative_expression
    (30) relational_expression -> . relational_expression LE_OP multiplicative_expression
    (31) relational_expression -> . relational_expression GE_OP multiplicative_expression
    (24) multiplicative_expression -> . additive_expression
    (25) multiplicative_expression -> . multiplicative_expression MUL additive_expression
    (26) multiplicative_expression -> . multiplicative_expression DIV additive_expression
    (21) additive_expression -> . primary_expression
    (22) additive_expression -> . additive_expression PLUS primary_expression
    (23) additive_expression -> . additive_expression MINUS primary_expression

    CUR_PAR_CLOSE   shift and go to state 38
    IDENTIFIER      shift and go to state 10
    CUR_PAR_OPEN    shift and go to state 12
    FUNC            shift and go to state 15
    IF              shift and go to state 18
    FROM            shift and go to state 19
    WHILE           shift and go to state 20
    RND_PAR_OPEN    shift and go to state 11
    LET             shift and go to state 24
    CONST           shift and go to state 25
    INT_LITERAL     shift and go to state 27
    FLOAT_LITERAL   shift and go to state 28
    STRING_LITERAL  shift and go to state 29

    statement_list                 shift and go to state 39
    statement                      shift and go to state 40
    function_call                  shift and go to state 3
    compound_statement             shift and go to state 4
    assignment_statement           shift and go to state 5
    function_definition            shift and go to state 6
    declaration                    shift and go to state 7
    selection_statement            shift and go to state 8
    iteration_statement            shift and go to state 9
    assignment_expression          shift and go to state 13
    primary_expression             shift and go to state 14
    init_declarator                shift and go to state 16
    declarator                     shift and go to state 17
    or_expression                  shift and go to state 21
    multiplicative_expression      shift and go to state 22
    literal                        shift and go to state 23
    and_expression                 shift and go to state 26
    equality_expression            shift and go to state 30
    relational_expression          shift and go to state 31
    additive_expression            shift and go to state 32

state 13

    (52) assignment_statement -> assignment_expression . SEMICOLON

    SEMICOLON       shift and go to state 41


state 14

    (53) assignment_statement -> primary_expression . EQUALS function_call
    (40) assignment_expression -> primary_expression . EQUALS multiplicative_expression
    (21) additive_expression -> primary_expression .

    EQUALS          shift and go to state 42
    PLUS            reduce using rule 21 (additive_expression -> primary_expression .)
    MINUS           reduce using rule 21 (additive_expression -> primary_expression .)
    MUL             reduce using rule 21 (additive_expression -> primary_expression .)
    DIV             reduce using rule 21 (additive_expression -> primary_expression .)
    LESS_OP         reduce using rule 21 (additive_expression -> primary_expression .)
    GREATER_OP      reduce using rule 21 (additive_expression -> primary_expression .)
    LE_OP           reduce using rule 21 (additive_expression -> primary_expression .)
    GE_OP           reduce using rule 21 (additive_expression -> primary_expression .)
    EQ_OP           reduce using rule 21 (additive_expression -> primary_expression .)
    NE_OP           reduce using rule 21 (additive_expression -> primary_expression .)
    AND_OP          reduce using rule 21 (additive_expression -> primary_expression .)
    OR_OP           reduce using rule 21 (additive_expression -> primary_expression .)
    SEMICOLON       reduce using rule 21 (additive_expression -> primary_expression .)


state 15

    (60) function_definition -> FUNC . IDENTIFIER RND_PAR_OPEN identifier_list RND_PAR_CLOSE ARROW type_specifier compound_statement

    IDENTIFIER      shift and go to state 43


state 16

    (3) declaration -> init_declarator . SEMICOLON

    SEMICOLON       shift and go to state 44


state 17

    (4) declaration -> declarator . EQUALS function_call
    (5) init_declarator -> declarator .
    (6) init_declarator -> declarator . EQUALS assignment_expression

    EQUALS          shift and go to state 45
    SEMICOLON       reduce using rule 5 (init_declarator -> declarator .)


state 18
